# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
blog_project/: settings.py  urls.py
posts/migrations/: 0001_initial.py
